--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-loader": "^8.0.6",
     "babel-preset-react-app": "^9.0.0",
     "copy-webpack-plugin": "^6.4.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
